--- a/react-app/src/App.css
+++ b/react-app/src/App.css
@@ -1,14 +1,7 @@
-.widget-root {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
+#root {
+  margin: 0 auto;
 }
 
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+body {
+  background-color: #6f34e4;
 }
