--- a/react-app/src/components/PostList.css
+++ b/react-app/src/components/PostList.css
@@ -1,10 +1,13 @@
 .widget-posts {
-
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 12px;
+  padding: 10px;
 }
 
 .widget-post {
   background-color: #340055;
-  margin: 12px 7px;
   padding: 7px;
   border-radius: 10px;
 
