--- a/react-app/src/components/UserHeader.css
+++ b/react-app/src/components/UserHeader.css
@@ -1,8 +1,14 @@
 .user-header {
   padding: 12px 16px;
   border-bottom: 0.5px solid #9b76e6;
+  background-color: #6f34e4;
+  max-width: 320px;
 
   display: flex;
   flex-direction: column;
   align-items: start;
+
+  position: fixed;
+  top: 0;
+  width: 100%;
 }
